Switch database from MySQL to MariaDB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,20 @@
-version: '3.8'
-
 services:
   db:
-    image: mysql:8.0
+    image: mariadb:latest
     container_name: ecommerce_db
     restart: always
     environment:
-      MYSQL_DATABASE: ecommerce
-      MYSQL_USER: shopuser
-      MYSQL_PASSWORD: password
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MARIADB_DATABASE: ecommerce
+      MARIADB_USER: shopuser
+      MARIADB_PASSWORD: password
+      MARIADB_ROOT_PASSWORD: rootpassword
     ports:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./ecommerce.sql:/docker-entrypoint-initdb.d/ecommerce.sql
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ["CMD", "mariadb-admin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
 
